--- a/.github/workflows/compile_all.yml
+++ b/.github/workflows/compile_all.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: DeterminateSystems/nix-installer-action@main
       - run: nix develop --command fak compile_all
+      - uses: EndBug/latest-tag@latest
       - uses: ncipollo/release-action@v1
         with:
           tag: latest
