swapping the default devShell and the full devShell
this is to be able to simply do `nix develop` without specifying which one to
use for cli stuff, which is just more convenient rather than having the devShell
as a default that gets soley used in github actions and the like.

--- a/.github/workflows/compile_all.yml
+++ b/.github/workflows/compile_all.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: DeterminateSystems/nix-installer-action@main
-      - run: nix develop --command fak compile_all
+      - run: nix develop .#container --command fak compile_all
       - uses: EndBug/latest-tag@latest
       - uses: ncipollo/release-action@v1
         with:
